@@ -1,11 +1,12 @@
 package com.example.sm.controller;
 
 import org.springframework.hateoas.Link;
-import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static com.example.sm.controller.APIController.BASE_URI;
@@ -16,14 +17,14 @@ import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
 public class HomeController extends APIController {
 
     @GetMapping
-    @PreAuthorize("hasAnyRole('ROLE_MANAGER', 'ROLE_PROFESSOR', 'ROLE_STUDENT')")
     public List<Link> showLinks() {
 
         Link l1 = linkTo(FacultyController.class).slash("/all").withRel("faculties");
         Link l2 = linkTo(ProfessorController.class).slash("/all").withRel("professors");
         Link l3 = linkTo(StudentController.class).slash("/all").withRel("students");
+        Link l4 = linkTo(CourseController.class).slash("/all").withRel("courses");
 
-        return List.of(l1, l2, l3);
+        return new ArrayList<>(Arrays.asList(l1, l2, l3, l4));
     }
 }
 
